tests/corpus/type_error/trace.txt
Traceback (most recent call last):
  File "/home/suraj/Desktop/let-me-fix/tests/corpus/type_error/main.py", line 4, in <module>
    add(1, "2")
  File "/home/suraj/Desktop/let-me-fix/tests/corpus/type_error/main.py", line 2, in add
    return a + b
           ~~^~~
TypeError: unsupported operand type(s) for +: 'int' and 'str'